RESOLVED FIXED134487
[WK2] Can not convert ‘sessionState.WebKit::SessionState::provisionalURL’ from ‘WebCore::URL’ to ‘bool’
https://bugs.webkit.org/show_bug.cgi?id=134487
Summary [WK2] Can not convert ‘sessionState.WebKit::SessionState::provisionalURL’ fro...
Gyuyoung Kim
Reported 2014-07-01 00:49:25 PDT
There is build break since rr170627. /home/gyuyoung/webkit/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp:1858:36: error: could not convert ‘sessionState.WebKit::SessionState::provisionalURL’ from ‘WebCore::URL’ to ‘bool’ if (sessionState.provisionalURL) {
Attachments
Patch (1.26 KB, patch)
2014-07-01 00:53 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-07-01 00:53:03 PDT
Gyuyoung Kim
Comment 2 2014-07-01 01:00:22 PDT
CC'ing Anders and Carlos
Gyuyoung Kim
Comment 3 2014-07-01 01:18:22 PDT
Note You need to log in before you can comment on or make changes to this bug.