[WK2] Can not convert ‘sessionState.WebKit::SessionState::provisionalURL’ from ‘WebCore::URL’ to ‘bool’ https://bugs.webkit.org/show_bug.cgi?id=134487

Rubber-stamped by Carlos Garcia Campos.

* UIProcess/WebPageProxy.cpp: Use isNull().
(WebKit::WebPageProxy::restoreFromState):

Canonical link: https://commits.webkit.org/152463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170632 268f45cc-cd09-0410-ab3c-d52691b4dbfc